--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<a [routerLink]="['./notes']">Notlarım</a>
+<a [routerLink]="['./notes']">Not Defterini Görüntülemek İçin Tıklayınız...</a>
 <router-outlet></router-outlet>
